force-app/main/default/objects/Application_Form_Settings__c/fields/Application_Verification_URL__c.field-meta.xml
<CustomField>
    <fullName>Application_Verification_URL__c</fullName>
    <description>Application Verification URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Application Verification URL</inlineHelpText>
    <label>Application Verification URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>