force-app/main/default/objects/Application_Form_Settings__c/fields/CC_RENTAL_INTEREST_RATE_CODE__c.field-meta.xml
<CustomField>
    <fullName>CC_RENTAL_INTEREST_RATE_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC RENTAL INTEREST RATE CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>