force-app/main/default/objects/Application_Form_Settings__c/fields/Credit_Card_Rental_Disclosure_URL__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Rental_Disclosure_URL__c</fullName>
    <description>Credit Card Rental Disclosure URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Credit Card Rental Disclosure URL</inlineHelpText>
    <label>Credit Card Rental Disclosure URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>