force-app/main/default/objects/Application_Form_Settings__c/fields/Credit_Report_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report_Expiry_Date__c</fullName>
    <label>Credit Report Expiry Date</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>