force-app/main/default/objects/Application_Form_Settings__c/fields/Email_Authentication_URL__c.field-meta.xml
<CustomField>
    <fullName>Email_Authentication_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Authentication URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>