force-app/main/default/objects/Application_Form_Settings__c/fields/Manitoba_Loan_Disclosure_URL__c.field-meta.xml
<CustomField>
    <fullName>Manitoba_Loan_Disclosure_URL__c</fullName>
    <description>Manitoba Loan Disclosure URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Manitoba Loan Disclosure URL</inlineHelpText>
    <label>Manitoba Loan Disclosure URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>