force-app/main/default/objects/Application_Form_Settings__c/fields/MB_CC_Rental_Disclosure_URL__c.field-meta.xml
<CustomField>
    <fullName>MB_CC_Rental_Disclosure_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MB CC Rental Disclosure URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>