force-app/main/default/objects/Application_Form_Settings__c/fields/Minimum_Employment_Length__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Employment_Length__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Minimum Employment Length needed to send the application to Decision Engine</description>
    <inlineHelpText>Minimum Employment Length needed to send the application to Decision Engine</inlineHelpText>
    <label>Minimum Employment Length</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>