force-app/main/default/objects/Application_Form_Settings__c/fields/Parent_Page_Domain__c.field-meta.xml
<CustomField>
    <fullName>Parent_Page_Domain__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the domain of the page that contains the Application Form iFrame (don&apos;t prepend www or http). Put * to accept any domain.</inlineHelpText>
    <label>Parent Page Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>