force-app/main/default/objects/Application_Form_Settings__c/fields/Power_Curve_Web_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>Power_Curve_Web_Service_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Power Curve Web Service URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>