force-app/main/default/objects/Application_Form_Settings__c/fields/Pre_Qualification_Card_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Pre_Qualification_Card_Image_URL__c</fullName>
    <description>store image URL for pre qualification form</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre Qualification Card Image URL</label>
    <type>Url</type>
</CustomField>