force-app/main/default/objects/Application_Form_Settings__c/fields/Preferred_Partner_Disclosure_URL__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Partner_Disclosure_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Preferred Partner Disclosure URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>