force-app/main/default/objects/Application_Form_Settings__c/fields/Redirect_URL_from_Canaccede_to_Fidem__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URL_from_Canaccede_to_Fidem__c</fullName>
    <description>to store URL to redirect from Canaccede landing page to Fidem web site</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Redirect URL from Canaccede to Fidem</label>
    <type>Url</type>
</CustomField>