force-app/main/default/objects/Application_Form_Settings__c/fields/Site_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Profile_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Site Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>