force-app/main/default/objects/Application_Form_Settings__c/fields/TP_Refer_HO_Interest_Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>TP_Refer_HO_Interest_Rate_Code__c</fullName>
    <description>TP Refer HO Interest Rate Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>TP Refer HO Interest Rate Code</inlineHelpText>
    <label>TP Refer HO Interest Rate Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>