force-app/main/default/objects/Application_Form_Settings__c/fields/TP_Refer_NHO_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>TP_Refer_NHO_Interest_Rate__c</fullName>
    <description>TP Refer NHO Interest Rate</description>
    <inlineHelpText>TP Refer NHO Interest Rate</inlineHelpText>
    <label>TP Refer NHO Interest Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>