force-app/main/default/objects/Application_Form_Settings__c/fields/Trans_Union_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Trans_Union_Member_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trans Union Member Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>