force-app/main/default/objects/Application_Form_Settings__c/fields/Verification_Expiration_Days__c.field-meta.xml
<CustomField>
    <fullName>Verification_Expiration_Days__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Verification Expiration Days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>