force-app/main/default/objects/Application_Form_Settings__c/fields/Verification_Failure_Page__c.field-meta.xml
<CustomField>
    <fullName>Verification_Failure_Page__c</fullName>
    <description>link to the Fidem site to the verification failure page</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>link to the Fidem site to the verification failure page</inlineHelpText>
    <label>Verification Failure Page</label>
    <length>150</length>
    <type>Text</type>
</CustomField>