force-app/main/default/objects/Application_Form_Settings__c/fields/Verification_Success_Page__c.field-meta.xml
<CustomField>
    <fullName>Verification_Success_Page__c</fullName>
    <description>link to the Fidem site with Verification success page</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>link to the Fidem site with Verification success page</inlineHelpText>
    <label>Verification Success Page</label>
    <length>250</length>
    <type>Text</type>
</CustomField>