force-app/main/default/objects/Application_Form_Settings__c/fields/Welcome_page_Card_image_URL__c.field-meta.xml
<CustomField>
    <fullName>Welcome_page_Card_image_URL__c</fullName>
    <description>to store welcome page Card image URL</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Welcome page Card image URL</label>
    <type>Url</type>
</CustomField>